code/hostname_1324371.err
  File "toy_example_gaussians.py", line 193
    fo mple_gaussians.py_ in range(rounds):
                    ^
SyntaxError: invalid syntax
